--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>status.srl - a serious mood picker :)</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Share your best feelings or simple show disappoinment.">
+    <meta name="description" content="Share your best feelings or simply show disappoinment.">
     <meta name="keywords" content="mood, picker, online, happy, sad, amber, green, red, traffic light, agile, scrum, health check">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/images/icons%PUBLIC_URL%/images/icons//apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/images/icons//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/images/icons//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/images/icons//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/images/icons//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/images/icons//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/images/icons//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/images/icons//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/images/icons//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="%PUBLIC_URL%/images/icons/android-icon-192x192.png">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="msapplication-starturl" content="/">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
     <link rel="stylesheet" href="%PUBLIC_URL%/reset.css">
-    <title>status.srl - a serious mood picker :)</title>
   </head>
   <body>
     <div id="root"></div>
